# ragbrain

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  architecture-state.md  docker-compose.yml  pyproject.toml
news/: 2026-04-15.md  2026-04-18.md  2026-04-20.md  2026-04-23.md  2026-04-24.md  README.md
src/ragbrain/: __init__.py  cli.py  config.py  models.py  scheduler.py
src/ragbrain/agents/: __init__.py  graph.py  state.py
src/ragbrain/agents/nodes/: __init__.py  check.py  generate.py  grade.py  retrieve.py  rewrite.py
src/ragbrain/delivery/: __init__.py  formatter.py  slack_delivery.py  telegram.py
src/ragbrain/eval/: __init__.py  assertions.py  judges.py  red_team.py  report.py  runner.py
src/ragbrain/ingestion/: __init__.py  pipeline.py
src/ragbrain/ingestion/chunkers/: __init__.py  code.py  router.py  semantic.py
src/ragbrain/ingestion/extractors/: __init__.py  base.py  pdf.py  rss.py  slack.py  web.py
src/ragbrain/pipelines/: __init__.py  architecture_review.py  articles.py  auto_implement.py  books.py  daily_briefing.py  proposals.py  upgrade_planner.py  x_thread.py
src/ragbrain/retrieval/: __init__.py  dense.py  fusion.py  hybrid.py  intent.py  reranker.py  sparse.py
src/ragbrain/vectorstore/: __init__.py  encoders.py  qdrant.py
tests/: test_chunkers.py  test_formatter.py  test_models.py  test_retrieval.py
tests/eval/: pipeline_behavior.yaml  rag_basic.yaml  red_team.yaml
