[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragbrain"
version = "0.1.0"
description = "An open-source, BYOK document intelligence framework with advanced agentic RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bhargob Deka" }]
keywords = ["rag", "llm", "langchain", "langgraph", "documents", "knowledge-base"]

dependencies = [
    # LangChain / LangGraph
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langgraph>=0.2.0",
    # Embeddings & reranking (local, no API key)
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    # Vector store
    "qdrant-client>=1.11.0",
    # Document extraction
    "pymupdf>=1.24.0",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",
    # Delivery
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.33.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Config & CLI
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    # AST-aware code chunking (tree-sitter + language grammars)
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "certifi>=2024.0.0",
    # Self-improving upgrade planner
    "deepagents>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
premium = [
    # Optional premium extractors (add your own API keys)
    # "landingai>=0.1.0",         # LandingAI ADE for complex PDFs
    # "llmwhisperer-client>=2.0.0", # LLMWhisperer for scanned docs
]

[project.scripts]
ragbrain = "ragbrain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ragbrain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
